# playquery

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  config.py  docker-compose.prod.yaml  docker-compose.yaml  install-with-docker-compose.ps1  install-with-docker-compose.sh  install.py  logger.py  main.py  playquery.schema.json  playquery.yaml  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: cd.yml  ci-cd.yml  ci.yml
agents/: __init__.py  base.py  helpful_assistant.py  playquery.py
ai_providers/: __init__.py  base.py  config.py  copilot.py  factory.py  openai.py  registry.py  tools.py
core/: __init__.py  service.py
parsers/: __init__.py  base.py  selector.py
scraper/: __init__.py  base.py  config.py  factory.py  patchright.py  registry.py
scripts/: generate_schema_hook.sh
search_engine/: __init__.py  base.py  config.py  factory.py  registry.py  searxng.py
tools/: __init__.py  _utils.py  batch_scrape.py  batch_search.py  ping_pong.py  scrape.py  search.py  search_and_scrape.py
