[project]
name = "playquery"
version = "1.0.4"
description = "MCP server for search, scraping, and cited web research."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = [
  "agents",
  "ai_providers",
  "config",
  "core",
  "parsers",
  "scraper",
  "search_engine",
  "tools",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
